--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>Here we are learning Git Distributive Version Control System.</p>
+    <p>Here we are learning Git Distributive Version Control System and working on Firebase Hosting.</p>
 </body>
 </html>
